            - The model 'UserRole' is now ordered by 'name' (it could break some unit tests).
            - The method 'CremeUser.clean()' now raises more errors ("A regular user must have a role.").
        # In many apps, the attributes 'SEARCH' of Populator classes have changed
          (because they implemented their own API before the new generic one).
        # In the class 'creme_core.bricks.StatisticsBrick', the attribute
          'statistics_registry' has been renamed "statistic_registry".
        # In the class 'creme_core.core.entity_cell.EntityCellActions' the constructor argument
          'actions_registry' has been renamed "action_registry".
        # In the class 'creme_core.forms.fields.EntityCredsJSONField', the attribute
          'quickforms_registry' has been renamed "quickform_registry".
        # In 'creme_core.gui' :
            - The method 'button_menu.Button.ok_4_display()' has been replaced by the method 'is_displayed()'.
            - The method 'bricks.Brick._render()' uses now the "template_name" found in the passed
              argument 'template_context', and not the attribute "template_name" directly anymore.
              The attribute is now injected in this context by '_build_template_context()', & so you don't have
              to change your code, excepted if you override 'self.template_name' after building the context.
        # In 'creme_core.views' :
            - The method 'creme_core.views.generic.base.BricksMixin.get_bricks()' now returns
              a dictionary instead of a list (to group Bricks per zone).
              All inheriting views have been modified, & their related templates too
              (typically "{% brick_declare bricks %}" became "{% brick_declare bricks.main %}").
              Notice that reloading views still use a list (because zones have no meaning in reloading context).
            - In the class 'generic.listview.EntitiesList':