@@ -509,7 +509,6 @@ class CremeCoreConfig(CremeAppConfig):
             bricks.ImprintsBrick,
             bricks.TrashBrick,
             bricks.StatisticsBrick,
-            # bricks.JobBrick,  # NB: has its own reloading view
             bricks.JobsBrick,
             bricks.MyJobsBrick,
             bricks.NotificationsBrick,
